--- a/idex.html
+++ b/idex.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="grid-container"></div>
+    <div id="grid-contanier"></div>
+    
     <script src="script.js"></script>
 </body>
 </html>
