--- a/idex.html
+++ b/idex.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <button id="btn">new grid</button>
     <div id="grid-contanier"></div>
     
     <script src="script.js"></script>
